updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently an Operations Manager who is studying web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Philadelphia Pennsylvania</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing guitar, singing, and going to concerts</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To work with prestigious tech company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Philadelphia Pennsylvania</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want a change in career.</p>
     </section>
 
     <footer id="footer">
